--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 							<header>
 								<h1>Hi. I'm <strong>Dr. Chan</strong>.</h1>
 							</header>
-							<p>I teach linear circuits and many other classes here at <strong><a href="https://www.ece.ucf.edu/person/chungyong-chan/">UCF</a></strong></p>
-							<a href="#work" class="button large scrolly">RIP your GPA</a>
+							<p>blah blah blahs here at <strong><a href="https://www.ece.ucf.edu/person/chungyong-chan/">UCF</a></strong></p>
+							<a href="#work" class="button large scrolly">CHAN</a>
 						</div>
 					</div>
 				</div>
@@ -53,15 +53,26 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<!-- <span class="icon featured fa-comments"></span> -->
-								<h3>Lecturing</h3>
-								<p>Probably the best professor in the ECE department.</p>
+								<h3>Soldering</h3>
+								
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<!-- <span class="icon featured fa-car"></span> -->
-								<h3>Advising</h3>
-								<p>My brother is a Tesla recruiter.</p>
+								<h3>Python</h3>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<!-- <span class="icon featured fa-car"></span> -->
+								<h3>HTML</h3>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<!-- <span class="icon featured fa-car"></span> -->
+								<h3>Verilog</h3>
 							</section>
 						</div>
 					</div>
@@ -85,8 +96,15 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
+								<a href="https://www.espn.com/college-football/" class="image featured"><img src="images/pic02.png" alt="" /></a>
+								<h3><a href="https://www.espn.com/college-football/">Semiconductors</a></h3>
+								<p>Tough.</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Semiconductors</a></h3>
+								<h3><a href="#">DSP</a></h3>
 								<p>Tough.</p>
 							</article>
 						</div>
@@ -104,11 +122,11 @@
 							<ul class="social">
 								<!-- font awesome icons, use search to check if compatible-->
 								<!-- be sure to apply class label -->
-								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.tesla.com/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<!-- fa-github or fa-github-square, your preference-->
 								<li><a href="#" class="icon brands fa-github-square"><span class="label">Github</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-soundcloud"><span class="label">Soundcloud</span></a></li>
+								
 							</ul>
 							<hr />
 						</div>
